--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@types/redux-persist": "^4.0.0",
+    "@vercel/analytics": "^1.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
